Don't prevent horizontal scrolling for wide message (e.g. embedded images)

--- a/skin/multimessageview.css
+++ b/skin/multimessageview.css
@@ -413,7 +413,8 @@ a.action:hover {
   width: 100%;
   margin-left: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 /* Message footer */
